Fixed hompage margin to big on small screens

--- a/app/assets/stylesheets/homepage/homepage.sass
+++ b/app/assets/stylesheets/homepage/homepage.sass
@@ -43,7 +43,7 @@ body
         text-align: center
       .description
         text-align: center
-        margin: 1em
+        padding: 1em
   .auth-button #auth
     color: #fff
     font-size: .95em
